Add to cart functionality

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
 
     <!-- ! Main Section -->
-    <section>
+    <section class="main-section mb-16 w-11/12 mx-auto">
       <div>
         <h1 class="text-4xl font-bold text-center mb-8">Choose Your Trees</h1>
       </div>
@@ -123,7 +123,10 @@
           </div>
         </div>
         <aside class="right-container">
-          <p>Right</p>
+          <h1 class="text-xl font-bold mb-2">Your Cart</h1>
+          <div class="cart-items"></div>
+          <div id="cart-total" class="font-bold mt-4"></div>
+          <button class="btn bg-[#15803D] hover:bg-[#166534] px-8 rounded-full">Checkout</button>
         </aside>
       </div>
     </section>
