--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
           <button class="btn bg-[#15803D] hover:bg-[#166534] w-full text-white mt-6">Checkout</button>
         </aside>
       </div>
+      <div id="pagination" class="mt-8 flex justify-center"></div>
     </section>
     <script src="./script/script.js"></script>
   </body>
