Plant details modal

--- a/index.html
+++ b/index.html
@@ -101,6 +101,23 @@
       </div>
     </dialog>
 
+    <!-- ! Plant Details Modal -->
+    <dialog id="plant-modal" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box">
+        <div class="flex items-center justify-between">
+          <h3 class="font-bold text-lg">Plant Details</h3>
+          <form method="dialog">
+            <button class="btn btn-sm btn-circle">✕</button>
+          </form>
+        </div>
+
+        <!-- Filled by JS -->
+        <div id="plant-modal-body" class="mt-4">
+          <!-- loading / details go here -->
+        </div>
+      </div>
+    </dialog>
+
     <!-- ! Hero -->
     <section class="hero-container">
       <div
