--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     />
     <!-- font Awesome -->
     <script src="https://kit.fontawesome.com/364257c701.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles.css" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./assets/plant.png" />
   </head>
   <body class="font-inter w-11/12 mx-auto bg-[#F0FDF4]">
     <header class="sticky top-0 z-50">
