--- a/index.html
+++ b/index.html
@@ -182,6 +182,15 @@
       </div>
       <div id="pagination" class="mt-8 flex justify-center"></div>
     </section>
+
+    <!-- ! Toasts -->
+    <div
+      id="toast-root"
+      class="toast toast-top toast-center z-[9999]"
+      aria-live="polite"
+      aria-atomic="true"
+    ></div>
+
     <script src="./script/script.js"></script>
   </body>
 </html>
