--- a/index.html
+++ b/index.html
@@ -183,6 +183,32 @@
       <div id="pagination" class="mt-8 flex justify-center"></div>
     </section>
 
+    <!-- ! About The Campaign -->
+    <section class="w-11/12 max-w-6xl mx-auto">
+      <div>
+        <h1 class="text-4xl font-bold text-center">Choose Your Trees</h1>
+      </div>
+      <div
+        class="campaign-container flex flex-col lg:flex-row gap-8 py-10 lg:py-20 lg:pr-40 justify-center items-center lg:items-start"
+      >
+        <div class="w-full lg:w-1/2">
+          <img src="./assets/about.png" alt="Campaign 1" class="w-full h-auto rounded-lg object-cover" />
+        </div>
+        <div class="w-full lg:w-1/2">
+          <p class="mb-4 text-justify">
+            Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our
+            start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore
+            forests, create habitats for wildlife, and combat global warming.
+          </p>
+          <ul class="list-disc list-inside space-y-1">
+            <li>Restoration of natural habitats</li>
+            <li>Improvement of air quality</li>
+            <li>Support for local communities</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     <!-- ! Toasts -->
     <div
       id="toast-root"
