Our Impact Section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </section>
 
     <!-- ! Main Section -->
-    <section class="main-section mb-16 w-11/12 mx-auto">
+    <section class="main-section mb-36 w-11/12 mx-auto">
       <div>
         <h1 class="text-4xl font-bold text-center mb-8">Choose Your Trees</h1>
       </div>
@@ -184,9 +184,9 @@
     </section>
 
     <!-- ! About The Campaign -->
-    <section class="w-11/12 max-w-6xl mx-auto">
+    <section class="w-11/12 max-w-6xl mx-auto mb-36">
       <div>
-        <h1 class="text-4xl font-bold text-center">Choose Your Trees</h1>
+        <h1 class="text-4xl font-bold text-center">About the Campaign</h1>
       </div>
       <div
         class="campaign-container flex flex-col lg:flex-row gap-8 py-10 lg:py-20 lg:pr-40 justify-center items-center lg:items-start"
@@ -205,6 +205,29 @@
             <li>Improvement of air quality</li>
             <li>Support for local communities</li>
           </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- ! Our Impact -->
+    <section class="bg-[#CFF0DC] mb-36 p-8">
+      <div class="mb-8">
+        <h1 class="text-4xl font-bold text-center">Our Impact</h1>
+      </div>
+      <div
+        class="impact-container flex flex-col lg:flex-row gap-8 py-4 justify-center items-center lg:items-start pb-[30px]"
+      >
+        <div class="flex flex-col justify-center items-center bg-white rounded-lg w-[450px] h-[200px]">
+          <h1 class="text-4xl font-bold">500k+</h1>
+          <p>Trees Planted</p>
+        </div>
+        <div class="flex flex-col justify-center items-center bg-white rounded-lg w-[450px] h-[200px]">
+          <h1 class="text-4xl font-bold">120+</h1>
+          <p>Countries Involved</p>
+        </div>
+        <div class="flex flex-col justify-center items-center bg-white rounded-lg w-[450px] h-[200px]">
+          <h1 class="text-4xl font-bold">30+</h1>
+          <p>Countries Reached</p>
         </div>
       </div>
     </section>
