--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </div>
               <ul
                 tabindex="0"
-                class="menu menu-sm dropdown-content bg-[#15803D] rounded-box z-1 mt-3 w-52 p-2 shadow"
+                class="menu menu-sm dropdown-content bg-[#15803D] rounded-box mt-3 w-52 p-2 shadow"
               >
                 <li><a>About</a></li>
                 <li>
@@ -161,18 +161,7 @@
         <div
           id="plant-cards-container"
           class="cards-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 justify-items-center"
-        >
-          <div class="card bg-base-100 shadow-md p-4 rounded-lg w-[350px] max-h-[400px]">
-            <img src="" alt="" class="" />
-            <h1 class="text-lg font-bold">Mango Tree</h1>
-            <p>Description</p>
-            <div class="flex items-center justify-between mt-2">
-              <a href="#">Fruit Tree</a>
-              <p>৳ <span>Price</span></p>
-            </div>
-            <button class="btn bg-[#15803D] hover:bg-[#166534] px-8 rounded-full">Get Involved</button>
-          </div>
-        </div>
+        ></div>
 
         <!-- ! Cart -->
         <aside id="cart-panel" class="right-container hidden lg:block w-full lg:w-80">
