--- a/index.html
+++ b/index.html
@@ -144,6 +144,18 @@
       <div>
         <h1 class="text-4xl font-bold text-center mb-8">Choose Your Trees</h1>
       </div>
+      <!-- Sort control -->
+      <div class="flex justify-center items-center mb-4 bg-[#00BF83] p-4 rounded-lg w-1/3 mx-auto">
+        <label class="flex items-center gap-2 text-sm">
+          Sort by:
+          <select id="sort-price" class="select select-sm w-44">
+            <option value="none" selected>Default</option>
+            <option value="asc">Price: Low to High</option>
+            <option value="desc">Price: High to Low</option>
+          </select>
+        </label>
+      </div>
+
       <div
         class="main-container flex flex-col lg:flex-row gap-8 p-4 justify-center items-center lg:items-start"
       >
