--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <h1 class="text-4xl font-bold text-center mb-8">Choose Your Trees</h1>
       </div>
       <!-- Sort control -->
-      <div class="flex justify-center items-center mb-4 bg-[#00BF83] p-4 rounded-lg w-1/3 mx-auto">
+      <div class="flex justify-center items-center mb-4 bg-[#00BF83] p-4 rounded-lg w-[300px] mx-auto">
         <label class="flex items-center gap-2 text-sm">
           Sort by:
           <select id="sort-price" class="select select-sm w-44">
@@ -163,7 +163,10 @@
         <div class="left-container lg:ml-16">
           <h1 class="text-xl font-bold mb-2">Categories</h1>
           <div>
-            <ul id="categories-container">
+            <ul
+              id="categories-container"
+              class="flex flex-wrap gap-2 justify-center lg:flex-col lg:gap-2 lg:justify-start"
+            >
               <!-- Categories will be dynamically loaded here -->
             </ul>
           </div>
